--- a/index.html
+++ b/index.html
@@ -19,6 +19,33 @@
     </div>
  </div>  
 </header>
+    <div class ="container is-fluid">
+        <input class="input is-large" type="text" placeholder="City">
+
+
+
+    </div>
+    <div class="container is-fluid">
+        <div class="columns is-mobile">
+                <div class="column">
+                    day one
+                    </div>
+                <div class="column">
+                    day two
+                    </div>
+                <div class="column">
+                    day three
+                    </div>
+                <div class="column">
+                    day four
+                    </div>
+                <div class="column">
+                    day five
+                    </div>
+        </div>
+
+    </div>
+
 </body>
 
 </script src="./assets/script.js"></script>
