--- a/index.html
+++ b/index.html
@@ -1,52 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.css" integrity="sha512-SI0aF82pT58nyOjCNfyeE2Y5/KHId8cLIX/1VYzdjTRs0HPNswsJR+aLQYSWpb88GDJieAgR4g1XWZvUROQv1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Weather</title>
+    <script src="https://kit.fontawesome.com/e14826e6af.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
+        referrerpolicy="no-referrer" />
+    <title>Weather DB</title>
 </head>
 
-
-
-
 <body>
-   <header>
-    <div class = "container is-fluid">
-        <div class ="notification is-primary">
-       <h1>Weather Checker</h1>
-    </div>
- </div>  
-</header>
-    <div class ="container is-fluid">
-        <input class="input is-large" type="text" placeholder="City">
 
 
-
-    </div>
-    <div class="container is-fluid">
-        <div class="columns is-mobile">
-                <div class="column">
-                    day one
-                    </div>
-                <div class="column">
-                    day two
-                    </div>
-                <div class="column">
-                    day three
-                    </div>
-                <div class="column">
-                    day four
-                    </div>
-                <div class="column">
-                    day five
-                    </div>
+    <div class="container mx-auto sm:px-4 max-w-full mx-auto sm:px-4">
+        <div
+            class="flex flex-wrap  relative flex flex-wrap items-center content-between py-3 px-4 text-white bg-gray-900">
+            <div class="w-full text-center">
+                <h1>Weather Dashboard</h1>
+            </div>
         </div>
 
-    </div>
+        <div class="flex flex-wrap ">
+            <div class="w-1/4 bg-gray-100 pb-2 pt-3">
+                <div class="flex flex-wrap ">
+                    <div class="w-full">
+                        <h4>Search for a City:</h4>
+                    </div>
+                </div>
 
+                <div class="flex flex-wrap ">
+                    <div class="w-full">
+                        <div class="relative flex items-stretch w-full">
+                            <input
+                                class="block appearance-none w-full py-1 px-2 mb-1 text-base leading-normal bg-white text-gray-800 border border-gray-200 rounded"
+                                type="text" id="searchCity" placeholder="Enter city">
+                            <button type="button" id="citySearchBtn"
+                                class="inline-block align-middle text-center select-none border font-normal whitespace-no-wrap rounded py-1 px-3 leading-normal no-underline bg-blue-600 text-white hover:bg-blue-600"><i
+                                    class="fa-solid fa-magnifying-glass"></i></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex flex-wrap  mt-3">
+                    <div class="w-full">
+                        <!--city history list-->
+                        <ul id="citySearchHistory" class="flex flex-col pl-0 mb-0 border rounded border-gray-300">
+
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+
+            <div id="weatherContent" class="w-3/4 pb-4 pt-4 ">
+                <div class="xl\:max-w-screen-sm rounded overflow-hidden shadow-lg ">
+                    <div id="currentnamedcity" class="w-full px-3 py-3">
+                        <!-- currentCity-->
+                        <div id="cityDetail">
+                            <h2 id="currentcity"> </h2>
+                            <div id="current-date"></div>
+
+                            <div id="uvresult" class="dimmer-switch">
+                                <p class="uvIndexCurrent"></p>
+                            </div>
+
+                            <p class="mb-0">
+                                <span id="current-weather-image"></span></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex flex-wrap  pb-2 pt-1">
+                    <div class="w-full ml-2">
+                        <h3>5-Day Forecast:</h3>
+
+                    </div>
+                </div>
+
+                <div id="fiveDayForecast" class="flex flex-wrap  pl-2">
+                    <!--5day-->
+                    <div
+                        class="p-4 w-full max-w-md bg-white rounded-lg border shadow-md sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+                        <div class="flex justify-between items-center mb-4">
+                            <div id="forecast">
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <script src="./assets/script.js"></script>
 </body>
 
-</script src="./assets/script.js"></script>
 </html>
